--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                     <input type="text" required placeholder="Name" id="name">
                 </div>
                 <div class="input_field">
-                    <input type="text" required placeholder="Modal" id="subject">
+                    <input type="text" required placeholder="Subject" id="subject">
                 </div>
                 <div class="input_field">
                     <input type="text" required placeholder="Phone" id="phone">
@@ -53,7 +53,7 @@
                     <textarea required placeholder="Message" id="message"></textarea>
                 </div>
                 <div class="submitbtn">
-                    <input type="submit" onclick="xyz()">
+                    <input type="submit">
                 </div>
             </form>
         </div>
